--- a/src/components/layout/AppLayout.module.css
+++ b/src/components/layout/AppLayout.module.css
@@ -23,7 +23,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    min-width: 0;
     background-color: #f5f7fa;
 }
 
